# cmake-rs

./: AGENTS.md  CHANGES.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
src/: archive.rs  cache.rs  download.rs  error.rs  lib.rs  main.rs  platform.rs
